components/cert-manager-operator/issuers/letsencrypt/base/archive/acme-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-ingress-prod                                          
  namespace: acme-ingress                                
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod          
    acme.cert-manager.io/http01-ingress-class: openshift-default 
spec:
  ingressClassName: openshift-default                            
  tls:
  - hosts:
    - "*.apps.lab.etbit.io"                                                
    secretName: acme-tls-prod                                       
  rules:
  - host: "*.apps.lab.etbit.io"                                           
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acme-workload-prod                             
            port:
              number: 80
